@@ -139,6 +139,11 @@ ifeq (,$(filter $(DEB_HOST_ARCH),sparc64 x32))
 	CONFIG += --enable-libx265
 endif
 
+# Disable i686 optimizations on i386, because they are not always available on this architecture.
+ifneq (,$(filter $(DEB_HOST_ARCH),i386 hurd-i386))
+	CONFIG += --disable-i686
+endif
+
 # Disable altivec optimizations on powerpc, because they are not always available on this architecture.
 ifeq ($(DEB_HOST_ARCH),powerpc)
 	CONFIG += --disable-altivec
